# my-tools

./: README.md
.claude/: CLAUDE.md
.github/workflows/: sky-trace-build.yml
lexiangla-scraper/: .env.example  CLAUDE.md  README.md  cli.py  preview_capture.py  requirements.txt  scraper.py
sky-trace/: CLAUDE.md  PLAN.md  README.md  package-lock.json  package.json  vite.config.ts
sky-trace/.ai/: auto-update_and_remote_control_f752e73a.plan.md
sky-trace/.claude/: settings.local.json
sky-trace/docs/: ai-analysis.md  architecture.md  feishu-bitable-setup.md  product-vision.md  release.md  remote-control.md
sky-trace/src/: App.vue  router.ts  styles.css
sky-trace/src-tauri/: Cargo.toml  clear.txt  tauri.conf.json
sky-trace/src-tauri/src/: lib.rs  main.rs  remote_config.rs  snapshot.rs
sky-trace/src-tauri/src/ai/: client.rs  config.rs
sky-trace/src-tauri/src/commands/: mod.rs
sky-trace/src-tauri/src/query_engine/: client.rs  mod.rs
sky-trace/src-tauri/src/storage/: db.rs  mod.rs  models.rs
sky-trace/src/components/: AnnouncementBanner.vue  DataUpdateDialog.vue  DynamicParamEditor.vue  FieldBindingInput.vue  FlowCard.vue  FlowFormDialog.vue  HighlightText.vue  JcpOrderResult.vue  NodeEditor.vue  NodeResult.vue  ParamHintPopover.vue  RemoteLockScreen.vue  Sidebar.vue  SnapshotExportDialog.vue  TimeRangeSelector.vue  UpdateDialog.vue
sky-trace/src/services/: aiContext.ts  tauri.ts
sky-trace/src/stores/: app.ts
sky-trace/src/types/: index.ts
sky-trace/src/views/: ChecklistManager.vue  FlowDetail.vue  FlowList.vue  QuickQuery.vue  Settings.vue  (+3 more)
