[package]
name = "sky-trace"
version = "0.1.0"
description = "天网日志链路追踪工具"
authors = ["soulx"]
edition = "2021"

[lib]
name = "sky_trace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
snapshot-only = []

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
urlencoding = "2"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

